<resources>
    <string name="app_name">Mobile Growth Monitor</string>
    <string name="manage_passcode">Manage passcode</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="enter_old_passcode">Enter old passcode</string>
    <string name="reenter_passcode">Re-enter passcode</string>
    <string name="change_passcode">Change passcode</string>
    <string name="unlock_passcode">Unlock Passcode</string>
    <string name="setup_passcode">Setup Passcode</string>
    <string name="passcode_wrong">Wrong passcode, please try again.</string>
    <string name="disable_passcode">Disable passcode</string>
    <string name="enable_passcode">Enable passcode</string>
    <string name="capture_image">Capture Image</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="fullscreen_image" translatable="false" />
    <string name="firstname">firstname</string>
    <string name="help">Help</string>
    <string name="age">age</string>
    <string name="date">Date</string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>
    <string name="foto">Photo</string>
    <string name="graph">Graph</string>
    <string name="gallery">Gallery</string>
    <string name="export" translatable="false">Export</string>
    <string name="save">Save</string>
    <string name="size_measurement">Size Measurement</string>
    <string name="birthday">Please enter the birthday of your child:</string>
    <string name="gender">Please choose the gender of your child: </string>
    <string name="enter_firstname">Enter firstname</string>
    <string name="enter_lastname">Enter lastname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="capture">Capture</string>
    <string name="measurement">Measurement</string>
    <string name="last_measurement">Last measurement:</string>
    <string name="in_kg">in kg</string>
    <string name="template_age">years old</string>
    <string name="export_data">Do you want to export the data per email?</string>
    <string name="yes">Yes</string>
    <string name="request_permission_cam">This app needs camera permission.</string>
    <string name="request_permission_read_storage">This app needs permission to read external storage.</string>
    <string name="cancel">Cancel</string>
    <string name="camera_overlay_image">Camera Overlay-Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="add_picture">Add Photo!</string>
    <string name="toast_enter_firstname">Please enter the childs firstname!</string>
    <string name="toast_enter_lastname">Please enter the childs lastname!</string>
    <string name="toast_choose_gender">Please choose the gender!</string>
    <string name="toast_choose_birthday">Please choose a reasonable birthday!</string>
    <string name="snackbar_create_profile">Create a new Profile?</string>
    <string name="bmi">The BMI is: %.2f</string>
    <string name="bmi_category_weight_child">The child %s</string>
    <string name="bmi_category_weight_adult">You %s</string>
    <string name="bmi_category_weight_not_valid">There is no WHO reference data in this age class</string>
    <string name="bmi_category_weight_child_severly_underweight">That means strong underweight!</string>
    <string name="bmi_category_weight_child_underweight">That means underweight!</string>
    <string name="bmi_category_weight_child_normal_weight">That means normal weight!</string>
    <string name="bmi_category_weight_child_overweight">That means overweight!</string>
    <string name="bmi_category_weight_child_severly_overweight">That means strong overweight!</string>

    <string name="weight_category_weight_child_severly_underweight">That means strong underweight for his height!</string>
    <string name="weight_category_weight_child_underweight">That means underweight for his height!</string>
    <string name="weight_category_weight_child_normal_weight">That means normal weight for his height!</string>
    <string name="weight_category_weight_child_overweight">That means overweight for his height!</string>
    <string name="weight_category_weight_child_severly_overweight">That means strong overweight for his height!</string>




    <string name="bmi_category_weight_adult_underweight">That means underweight!</string>
    <string name="bmi_category_weight_adult_normal_weight">That means normal weight!</string>
    <string name="bmi_category_weight_adult_overweight">That means overweight!</string>
    <string name="bmi_category_weight_adult_obesity">That means obesity!</string>
    <string name="bmi_category_weight_adult_sever_obesity">That means severe obesity!</string>


    <string name="enter_height">Please enter the childs height!</string>
    <string name="enter_weight">Please enter the childs weight!</string>
    <string name="weight_in_kg">weight in kg</string>
    <string name="height_in_cm">height in cm</string>
    <string name="app_needs_permission">App needs permission.</string>
    <string name="image_retrieval_failed">Image retrieval failed.</string>
    <string name="measurement_success">Success, your kid is %f cm tall</string>
    <string name="error">There seems to be an error</string>
    <string name="image_saving_success">Success! Your picture has been saved! Loading Profile…</string>
    <string name="sensor_not_found">Sensor not found!</string>
    <string name="pitch">Pitch: %d</string>
    <string name="roll">Roll: %d</string>
    <string name="heightReference">Height of Reference Object in cm</string>
    <string name="enter_heightReference">Please enter the height of the reference object!</string>
    <string name="validate_data">Please enter valid data</string>

    <string name="category_height_child_very_short">is very short!</string>
    <string name="category_height_child_short">is short!</string>
    <string name="category_height_child_normal_height">has normal height!</string>
    <string name="category_height_child_tall">is tall!</string>
    <string name="category_height_child_very_tall">is very tall!</string>

    <string name="delete_profile">Do you really want to delete this profile?</string>
    <string name="delete_profile_title">Delete Profile?</string>
    <string name="export_gif">Do you really want to export the pictures as gif?</string>
    <string name="loading">Loading, feel free to browse around the app...</string>
    <string name="no_measurements">There are no measurements to export!</string>
    <string name="mail_with_gif">Mail with a .gif-file that contains the morphing gif for specific profile.</string>
    <string name="database_exported">Success! Your database has been exported!</string>
    <string name="mail_csv_file">Mail with a .csv-file that contains the measurement data for specific profile.</string>
    <string name="pictures_converted_gif">Success! Your pictures have been converted in a gif.</string>
    <string name="mail_subject">MobileGrowthMonitor Data</string>
    <string name="graph_not_enough_measurements">Not enough measurements for a graph!</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="open_source_license1" translatable="false">
        <b>AppLock</b>\n(https://github.com/coderkiss/AppLock)\n<i>Apache License Version 2.0</i>\n\n
        <b>OpenCSV Writer</b>\n(http://opencsv.sourceforge.net/)\n<i>Apache License Version 2.0</i>\n\n
        <b>AndroidPlot</b>\n(http://androidplot.com/)\n<i>Apache License Version 2.0</i>\n\n
        <b>AnimatedGifEncoder</b>\n(https://github.com/nbadal/android-gif-encoder)\n<i>Based on J2ME encoder:</i>\n(http://www.jappit.com/blog/2008/12/04/j2me-animated-gif-encoder/)\n\n
        <b>Icons8</b>\n(https://icons8.com/)\n<i>Apache License Version 2.0</i>\n\n
        <b>Material icons</b>\n(https://design.google.com/icons/)\n<i>Creative Commons Attribution-NoDerivs 3.0 Unported</i>\n\n
    </string>
    <string name="general_terms_and_conditions">Put your general terms and conditions here.</string>
    <string name="gtc">General terms and conditions</string>
    <string name="graph_help_title">Explanation</string>
    <string name="explanation">These graphs show how the measured data compares to WHO Growth Standards of children with the same age.
    The higher bar (SD+2) and the lower bar (SD-2) are the cut off points that the WHO calls abnormal growth.\n\nSD: standard deviation
    </string>
    <string name="cdr_not_enough_measurements">Not enough Mesurements for a CDR</string>
    <string name="cdr_no_further">No further investigation required</string>
    <string name="cdr_diagnostic">Referal for Diagnostic work-up</string>
    <string name="cdr_birthweight">Enter birthweight</string>
    <string name="cdr_distance_target_height">Distance to standardised target height less than –2 SD</string>
    <string name="cdr_disproportion">Disproportion or dysmorphic features, or both</string>
    <string name="cdr_birthweight_length_gestation">Birthweight or length of gestation less than -2SD, or emotional deprivation?</string>
    <string name="cdr_too_old">Too old for CDR</string>
    <string name="no">No</string>
    <string name="instruction">Please put your rectangular reference object in the left upper rectangle, like the blue card in the picture below. Then position the person in the camera view as below between the two vertical lines.\n\nThen pitch and rotate your phone until the values of pitch and roll are near Zero und have a green background.\n\nOnly then you\'ll be able to take a picture!</string>
    <string name="titel_instructions">How to take a picture:</string>
    <string name="diagram_legend">Diagram legend</string>
</resources>
