<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="de.hs_mannheim.planb.mobilegrowthmonitor.ProfileView">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_profile_view"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="60dp"
            tools:context="de.hs_mannheim.planb.mobilegrowthmonitor.ProfileView">


            <ImageButton
                android:id="@+id/ib_profilepic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                android:background="@drawable/gradient_box_buttons"
                android:layout_above="@+id/btn_camera"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tv_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/ib_profilepic"
                android:layout_toRightOf="@+id/ib_profilepic"
                android:padding="3dp"
                android:text="@string/firstname"
                android:textSize="26dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/tv_firstname"
                android:layout_toRightOf="@+id/tv_firstname"
                android:padding="3dp"
                android:text="@string/age"
                android:textSize="26sp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/iv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_toEndOf="@+id/tv_age"
                android:layout_toRightOf="@+id/tv_age"
                android:layout_alignBottom="@+id/tv_age"
                android:layout_alignTop="@+id/tv_age" />

            <TextView
                android:id="@+id/tv_label_last_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_measurement"
                android:layout_below="@+id/tv_firstname"
                android:layout_toRightOf="@+id/ib_profilepic"
                android:layout_toEndOf="@+id/ib_profilepic"
                android:textSize="14sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/tv_date_last_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_firstname"
                android:padding="3dp"
                android:layout_marginLeft="5sp"
                android:text="@string/date"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/tv_label_last_measurement" />

            <TextView
                android:id="@+id/tv_label_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_date_last_measurement"
                android:layout_toEndOf="@+id/ib_profilepic"
                android:layout_toRightOf="@+id/ib_profilepic"
                android:padding="5dp"
                android:text="@string/height"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_date_last_measurement"
                android:padding="3dp"
                android:layout_marginLeft="5sp"
                android:text="in m"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/tv_label_height" />

            <TextView
                android:id="@+id/tv_label_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_height"
                android:layout_toEndOf="@+id/ib_profilepic"
                android:layout_toRightOf="@+id/ib_profilepic"
                android:padding="5dp"
                android:text="@string/weight"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_height"
                android:padding="3dp"
                android:text="@string/in_kg"
                android:textSize="16sp"
                android:layout_alignLeft="@+id/tv_height" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_weight"
                android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
                android:background="@drawable/gradient_box_buttons"
                android:layout_margin="3dp"
                android:onClick="startCamera"
                android:padding="5dp"
                android:text="@string/foto"
                android:textAlignment="viewStart"
                android:textSize="22dp" />

            <Button
                android:id="@+id/btn_graphs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_camera"
                android:drawableLeft="@drawable/ic_timeline_black_24dp"
                android:background="@drawable/gradient_box_buttons"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/graph"
                android:onClick="startGraph"
                android:textAlignment="viewStart"
                android:textSize="22dp" />

            <Button
                android:id="@+id/btn_measurements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_graphs"
                android:drawableLeft="@drawable/ic_create_black_24dp"
                android:background="@drawable/gradient_box_buttons"
                android:layout_margin="3dp"
                android:onClick="startMeasurement"
                android:padding="5dp"
                android:text="@string/measurement"
                android:textAlignment="viewStart"
                android:textSize="22dp" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_measurements"
                android:drawableLeft="@drawable/ic_photo_library_black_24dp"
                android:background="@drawable/gradient_box_buttons"
                android:layout_margin="3dp"
                android:onClick="startGallery"
                android:padding="5dp"
                android:text="@string/gallery"
                android:textAlignment="viewStart"
                android:textSize="22dp" />

            <Button
                android:id="@+id/btn_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_gallery"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:background="@drawable/gradient_box_buttons"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:text="@string/export"
                android:textAlignment="viewStart"
                android:textSize="22dp"
                android:onClick="startExport" />
        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>