<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="de.hs_mannheim.planb.mobilegrowthmonitor.imageprocessing.PreCameraView">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_pre_camera_view"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="60dp">

            <TextView
                android:id="@+id/tv_heightReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/heightReference" />

            <EditText
                android:id="@+id/et_heightReference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_heightReference"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="6" />


            <TextView
                android:id="@+id/tv_weightMeasurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_heightReference"
                android:layout_marginTop="30dp"
                android:text="@string/weight_in_kg" />

            <EditText
                android:id="@+id/et_weightMeasurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_weightMeasurement"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="6" />

            <Button
                android:id="@+id/btn_save_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_weightMeasurement"
                android:text="@string/save"
                android:visibility="invisible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_save_measurement"
                android:id="@+id/tv_titel_instruction"
                android:text="How to take a picture:"
                android:textAlignment="center"
                android:textSize="16dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_titel_instruction"
                android:padding="5dp"
                android:text="@string/instruction" />

            <ImageView
                android:id="@+id/iv_instruction_for_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_instruction"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/img_instruction_overlay" />

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
